[package]
name = "oml-game-egui"
version = "0.40.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "MIT"
description = "Very tiny helper to use egui with oml-game."
readme = "README.md"
homepage = "https://github.com/AndreasOM/oml-game-egui"
repository = "https://github.com/AndreasOM/oml-game-egui"
keywords = ["tools", "gamedev"]
categories = ["multimedia","game-development"]

[dependencies]
anyhow = "1.0.68"
atty = "0.2.14"
egui = { version = "0.21.0", features = ["tracing"] }
#oml-game = "0.32.2-alpha"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dependencies.oml-game]
# path = "../oml-game"
version = "0.40.0-alpha"
#git = "https://github.com/AndreasOM/oml-game"
#branch = "episode-0038"
